<resources>
    <string name="app_name">My Farm</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sell">Sell</string>
    <string name="myshop">My Shop</string>
    <string name="news">News</string>
    <string name="weather">Weather</string>
    <string name="pricepred">Price Prediction</string>
    <string name="buy">Buy</string>
    <string name="mycart">My Cart</string>
    <string name="recommend">Recommend</string>
    <string name="viewprod">View Product List</string>
    <string name="addprod">Add Product</string>
    <string name="home">Home</string>
    <string name="godown">Godown and Cold Storage</string>
    <string name="seed">Seed Dealers</string>
    <string name="cropdis">Crop diseases</string>
    <string name="pest">Pesticides</string>
    <string name="share">Share</string>
    <string name="contact">Contact us</string>
    <string name="logout">Logout</string>
    <string name="lang">Language</string>
    <string name="buyprod">buy products</string>
    <string name="viewprod1">view products</string>
    <string name="recom1">view highest rated farmers</string>
    <string name="sellprod">sell your products</string>
    <string name="shop1">view sold products</string>
    <string name="news1">stay updated</string>
    <string name="weather1">get weather information</string>
    <string name="pred">find out future prices</string>
    <string name="brow">Browse</string>
    <string name="addp">Add Product</string>
    <string name="sel">Select Crop</string>
    <string name="update">Update</string>
    <string name="del">Delete</string>
    <string name="view">View</string>
    <string name="filter">Filter</string>
    <string name="loh">Low to High</string>
    <string name="hl">High to Low</string>
    <string name="addcart">Add to Cart</string>
    <string name="post">Post</string>
    <string name="by">Buy</string>
    <string name="total">Total</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign Up</string>
    <string name="con">Consumer</string>
    <string name="farm">Farmer</string>
    <string name="login">Login</string>
    <string name="send">Send Mail</string>
    <string name="create">Create Account</string>
    <string name="email">E-mail</string>
    <string name="pass">Password</string>
    <string name="loginas">Login As</string>
    <string name="nam">Name</string>
    <string name="phn">PhoneNo</string>
    <string name="add">Address</string>
    <string name="temp">Temperature</string>
    <string name="pres">Pressure</string>
    <string name="hum">Humidity</string>
    <string name="mint">Min Temp</string>
    <string name="maxt">Max Temp</string>

</resources>

