<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/p3">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="260dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:background="@drawable/agri2"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center|bottom"
            android:background="#80000000">
            <TextView
                android:id="@+id/sin"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/signin"
                android:textColor="#fff"
                android:textSize="16dp"
                android:padding="16dp"/>
            <TextView
                android:id="@+id/sup"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textColor="#fff"
                android:textSize="16dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="16dp"/>
        </LinearLayout>
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

    <customfonts.MyEditText
        android:id="@+id/mal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="text"
        android:textColor="#000"
        android:background="#f0f0f4"
        android:padding="12dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:drawableLeft="@drawable/imail"
        android:drawablePadding="16dp"
        />
    <customfonts.MyEditText
        android:id="@+id/pswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:background="#f0f0f4"
        android:textColor="#000"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="12dp"
        android:drawableLeft="@drawable/ipassword"
        android:drawablePadding="16dp"
        />
    <TextView
        android:id="@+id/sendmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btnformate"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:gravity="center"
        android:textAlignment="center"
        android:padding="14dp"
        android:text="@string/send"
        android:textSize="16dp"
        android:textColor="#fff"
        />
    <customfonts.MyEditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nam"
        android:inputType="text"
        android:textColor="#000"
        android:background="#f0f0f4"
        android:padding="12dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:drawableLeft="@drawable/iname"
        android:drawablePadding="16dp"

        />

            <customfonts.MyEditText
                android:id="@+id/phno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="#f0f0f4"
                android:drawableLeft="@drawable/iphone"
                android:drawablePadding="16dp"
                android:hint="@string/phn"
                android:inputType="number"
                android:padding="12dp"
                android:textColor="#000" />

    <customfonts.MyEditText
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add"
        android:inputType="text"
        android:background="#f0f0f4"
        android:textColor="#000"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="12dp"
        android:drawableLeft="@drawable/iadd"
        android:drawablePadding="16dp"
        />
    <TextView
        android:id="@+id/act"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btnformate"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:gravity="center"
        android:textAlignment="center"
        android:padding="14dp"
        android:text="@string/create"
        android:textSize="16dp"
        android:textColor="#fff"
        />


        </LinearLayout>
    </ScrollView>

</LinearLayout>
