<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@mipmap/p4">
    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:clickable="true"
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/buy"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@android:color/holo_blue_bright"
                    android:padding="10dp"
                    android:src="@mipmap/buy"
                    tools:background="@android:color/holo_blue_bright" />

                <TextView
                    android:id="@+id/buy1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/buy"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/buyprod"
                    android:padding="5dp"
                    android:textColor="@android:color/darker_gray"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>







    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:clickable="true"
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/mycart"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="?android:attr/textColorLinkInverse"
                    android:padding="10dp"
                    android:src="@mipmap/mycart" />

                <TextView
                    android:id="@+id/pricealert1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/mycart"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/viewprod1"
                    android:textColor="@android:color/darker_gray" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:clickable="true"
            android:layout_width="160dp"
            android:layout_height="190dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/recommend"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/holo_blue_light"
                    android:padding="10dp"
                    android:src="@mipmap/demands"
                    tools:background="@android:color/holo_blue_dark" />

                <TextView
                    android:id="@+id/rec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/recommend"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/recom1"
                    android:padding="5dp"
                    android:textColor="@android:color/darker_gray"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>



